cambiando los preAuthorize y agregando un endpoint para buscar por mail